Fixes the bug: the project name if too long goes on two lines in the right side panel of the chat

--- a/src/app/ws_requests/ws-requests-msgs/ws-requests-msgs.component.scss
+++ b/src/app/ws_requests/ws-requests-msgs/ws-requests-msgs.component.scss
@@ -2402,6 +2402,15 @@ and also iPads specifically.
   height: auto;
 }
 
+.chat-panel-mode-project-name {
+  margin-bottom: 0px;
+  margin-top: 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+}
+
 /* SWAL SM SIZE - moved in demo css to avoid the use of  encapsulation: ViewEncapsulation.None */
 // .swal-size-sm {
 //   width: 260px !important;
